--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,7 @@
 
 // Typography
 $base-font-size: 16px !default;
-$small-font-size:  0.875rem !default;
+$small-font-size:  1.0rem !default;
 $bold-font-weight: bold !default;
 $font-family: Helvetica, Arial, sans-serif !default;
 $line-height: 1.5 !default;
@@ -54,6 +54,7 @@ $purple:            #B509AC !default;
 $pink:              #f92080 !default;
 $light-pink:        #ffdddd !default;
 $yellow:            #efcc00 !default;
+$black:             #000000 !default;
 
 $white:             #fff !default;
 $dark-gray:         #333 !default;
@@ -72,8 +73,8 @@ $darken-4:          rgba(#000,.5) !default;
 
 $theme-color:       $dark-blue;
 $code-color:        $dark-gray;
-$text-color:        $dark-gray;
-$background-color:  white;
+$text-color:        $black;
+$background-color:  $white;
 
 // Links
 $link-color:        $theme-color;
